--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -60,15 +60,23 @@
       }
       changeRedToWhite();
 
-      
-      
+      function changeTitle() {
+        let takeTitle = document.getElementsByTagName("h1")[0];
+        takeTitle.innerText = "Exercício 5.1 - JavaScript";
+      }
+      changeTitle();
+
+      function turnUpperCase() {
+        let takeParagraph = document.getElementsByTagName('p')[0];
+        takeParagraph.innerHTML = takeParagraph.innerHTML.toUpperCase();
+      }
+      turnUpperCase();
+
       /*
         Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
         - document.getElementById()
         - document.getElementsByClassName()
         - document.getElementsByTagName()
- Crie e execute uma função que mude a cor do quadrado vermelho para branco.
- Crie e execute uma função que corrija o texto da tag <h1>.
  Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
  Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
         */
