resolve sexto ex

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -72,14 +72,14 @@
       }
       turnUpperCase();
 
-      /*
-        Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
-        - document.getElementById()
-        - document.getElementsByClassName()
-        - document.getElementsByTagName()
- Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
- Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
-        */
+      function showTagConsole() {
+        let show = document.getElementsByTagName('p');
+        for (let i = 0; i < show.length; i += 1) {
+          console.log(show[i].innerHTML);
+        }
+      }
+      showTagConsole();
+
     </script>
   </body>
 </html>
