--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -57,10 +57,12 @@
   </head>
   <body>
     <script>
-      let body = document.getElementsByTagName('body')[0];
-      let title = document.createElement('h1');
+      const body = document.getElementsByTagName('body')[0];
+      const title = document.createElement('h1');
       title.innerText = 'Exercício 5.2 - JavaScript DOM';
       body.appendChild(title);
+      const main = document.createElement('main');
+      body.appendChild(main);
 
     </script>
   </body>
