adiciona class ao main

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -63,7 +63,7 @@
       body.appendChild(title);
       const main = document.createElement('main');
       body.appendChild(main);
-      main.tagName = "main-content"
+      main.className = "main-content"
 
     </script>
   </body>
