--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -71,7 +71,11 @@
       const section = document.createElement('section');
       section.className = 'center-content';
       pegandoMain.appendChild(section);
-
+      // EX 4 :
+      const paragraph = document.createElement('p');
+      paragraph.innerText = 'DECOLAR TRYBER!';
+      const pegandoSection = document.getElementsByClassName('center-content')[0];
+      pegandoSection.appendChild(paragraph);
     </script>
   </body>
 </html>
