resolve ex5,ex6

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -76,6 +76,15 @@
       paragraph.innerText = 'DECOLAR TRYBER!';
       const pegandoSection = document.getElementsByClassName('center-content')[0];
       pegandoSection.appendChild(paragraph);
+      // EX 5 :
+      const secondSection = document.createElement('section');
+      secondSection.className = 'left-content';
+      pegandoMain.appendChild(secondSection);
+      // EX 6 :
+      const thirdSection = document.createElement('section');
+      thirdSection.className = 'right-content';
+      pegandoMain.appendChild(thirdSection);
+
     </script>
   </body>
 </html>
