--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -100,7 +100,11 @@
         li.innerHTML = array[number];
         UnordenedList.appendChild(li);
       }
-
+      // EX 9:
+      for (let index = 0; index <= 3; index += 1){
+        const h3 = document.createElement('h3');
+        pegandoMain.appendChild(h3);
+      }
     </script>
   </body>
 </html>
