--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -57,40 +57,42 @@
   </head>
   <body>
     <script>
-      // EX 1 :
+      // EX 1 Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body:
       const body = document.getElementsByTagName('body')[0];
       const title = document.createElement('h1');
       title.innerText = 'Exercício 5.2 - JavaScript DOM';
       body.appendChild(title);
-      // EX 2 :
+      // EX 2 Adicione a tag main com a classe main-content como filho da tag body:
       const main = document.createElement('main');
       body.appendChild(main);
       main.className = 'main-content';
-      // EX 3 :
+      // EX 3 Adicione a tag section com a classe center-content como filho da tag main criada no passo 2:
       const pegandoMain = document.getElementsByClassName('main-content')[0];
       const section = document.createElement('section');
       section.className = 'center-content';
       pegandoMain.appendChild(section);
-      // EX 4 :
+      // EX 4 Adicione a tag p como filho do section criado no passo 3 e coloque algum texto:
       const paragraph = document.createElement('p');
       paragraph.innerText = 'DECOLAR TRYBER!';
       const pegandoSection = document.getElementsByClassName('center-content')[0];
       pegandoSection.appendChild(paragraph);
-      // EX 5 :
+      // EX 5 Adicione a tag section com a classe left-content como filho da tag main criada no passo 2:
       const secondSection = document.createElement('section');
       secondSection.className = 'left-content';
       pegandoMain.appendChild(secondSection);
-      // EX 6 :
+      // EX 6 Adicione a tag section com a classe right-content como filho da tag main criada no passo 2:
       const thirdSection = document.createElement('section');
       thirdSection.className = 'right-content';
       pegandoMain.appendChild(thirdSection);
-      // EX 7:
+      // EX 7 Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image.
+      //Esse elemento deve ser filho do section criado no passo 5:
       const pegandoSecondSection = document.getElementsByClassName('left-content')[0];
       const img = document.createElement('img');
       img.className = 'small-image';
       img.src = 'https://picsum.photos/200';
       pegandoSecondSection.appendChild(img);
-      // EX 8:
+      // EX 8 Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um, dois, três, 
+      //como valores da lista. Essa lista deve ser filha do section criado no passo 6;:
       const UnordenedList = document.createElement('ul');
       const pegandoThirdSection = document.querySelector('.right-content');
       pegandoThirdSection.appendChild(UnordenedList);
@@ -100,11 +102,16 @@
         li.innerHTML = array[number];
         UnordenedList.appendChild(li);
       }
-      // EX 9:
+      // EX 9 dicione 3 tags h3, todas sendo filhas do main criado no passo 2:
       for (let index = 0; index <= 3; index += 1){
         const h3 = document.createElement('h3');
         pegandoMain.appendChild(h3);
       }
+      // Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
+      // 1 :
+        const pegandoTitle = document.querySelector('h1');
+        pegandoTitle.className = 'title';
+
     </script>
   </body>
 </html>
