--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -120,6 +120,9 @@
       // Utilize a função .removeChild();
         const removingSection = document.getElementsByClassName('left-content')[0];
         pegandoMain.removeChild(removingSection);
+      // 4  Centralize a section criado no passo 6 (aquele que possui a classe right-content).
+      // Dica: para centralizar, basta configurar o margin-right: auto da section;
+        pegandoThirdSection.style.marginRight = 'auto';
     </script>
   </body>
 </html>
