resolve ex6 segunda parte

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercises-foguete.html
@@ -124,10 +124,13 @@
       // Dica: para centralizar, basta configurar o margin-right: auto da section;
         pegandoThirdSection.style.marginRight = 'auto';
       // 5 Troque a cor de fundo do elemento pai da section criada no passo 3 
-      // (aquela que possui a classe center-content) para a cor verde;
+      // (aquela que possui a classe center-content) para a cor verde:
       const pickCenterContent = document.querySelector('.center-content');
       pickCenterContent.style.background = 'green';
-
+      //  6 Remova os dois últimos elementos (nove e dez) da lista criada no passo 8:
+      const recuperaUl = document.getElementsByTagName('ul')[0];
+      recuperaUl.lastElementChild.remove();
+      recuperaUl.lastElementChild.remove();
     </script>
   </body>
 </html>
